--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <a href="#">Secciones</a>
                     <ul class="dropdown-content">
                         <li><a href="publicaciones.html">Publicaciones</a></li>
-                        <li><a href="CV.html"><i>Curriculum vitae</i></a></li>
+                        <li><a href="cv.html"><i>Curriculum vitae</i></a></li>
                         <li><a href="perfil_académico.html">Perfil académico</a></li>
                     </ul>
                 </li>
