--- a/publicaciones.html
+++ b/publicaciones.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Publicaciones</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <p>Insertar aquí las publicaciones</p>
+    <h1>Publicaciones en revistas académicas</h1>
+    <h1 id="journal-publications">Journal publications</h1>
+<ul>
+<li>
+<p>2023. The long-term average spectrum in forensic phonetics: From collation to discrimination of speakers. <em>Journal of Experimental Phonetics</em>, <em>32</em>, 87-110. <a href="https://doi.org/10.1344/efe-2023-32-87-110" target="_blank"><i class = "ai ai-doi ai-lg"></i></a><a href="https://revistes.ub.edu/index.php/experimentalphonetics/article/view/44481/40851" target="_blank"><i class = "ai ai-open-access ai-lg"></i></a>
+</li>
+</ul>
 </body>
 </html>
