--- a/publicaciones.html
+++ b/publicaciones.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <h2>Publicaciones en revistas académicas</h2>
-    <h1 id="journal-publications">Journal publications</h1>
+    <h1>Publicaciones</h1>
+    <h2 id="journal-publications">En revistas académicas</h2>
 <ul>
 <li>2023. The long-term average spectrum in forensic phonetics: From collation to discrimination of speakers. <em>Journal of Experimental Phonetics</em>, <em>32</em>, 87-110. <a href="papers/just-alcaraz-2023.pdf" target="_blank">[Descarga aquí]</a><a href="https://doi.org/10.1344/efe-2023-32-87-110" target="_blank"><i class = "ai ai-doi ai-lg"></i></a><a href="https://revistes.ub.edu/index.php/experimentalphonetics/article/view/44481/40851" target="_blank"><i class = "ai ai-open-access ai-lg"></i></a></li>
 </ul>
