--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li class="dropdown">
-                    <a href="#">Secciones</a>
+                    <a href="#">Secciones disponibles</a>
                     <ul class="dropdown-content">
                         <li><a href="publicaciones.html">Publicaciones</a></li>
                         <li><a href="cvn-completo.pdf"><i>Curriculum vitae</i></a></li>
@@ -23,7 +23,8 @@
         </nav>
     </header>
     <main>
-        <h1>Bienvenido a mi página web</h1>
+        <h1>Bienvenidos a mi página web</h1>
+        <p>Hola, soy Jordi Just Alcaraz y esta es mi página web. Actualmente —y seguro que durante mucho tiempo—, se encuentra en construcción, así que ten paciencia si algo no funciona y, sobre todo, házmelo saber (jordijustalcaraz@usal.es)</p>
     </main>
 </body>
 </html>
