--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li class="dropdown">
-                    <a href="#">Secciones disponibles</a>
-                    <ul class="dropdown-content">
-                        <li><a href="publicaciones.html">Publicaciones</a></li>
-                        <li><a href="cvn-completo.pdf"><i>Curriculum vitae</i></a></li>
-                        <li><a href="perfil_académico.html">Perfil académico</a></li>
-                    </ul>
+        <div class="navbar-collapse main-menu-item collapse justify-content-start" id="navbar-content">
+            <ul class="navbar-nav d-md-inline-flex">
+                <li class="nav-item">
+                    <a class="nav-link " href="index.html" data-target="#about"><span>Inicio</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " href="perfil_académico.html"><span>Perfil académico</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " href="publicaciones.html"><span>Publicaciones</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " href="cvn-completo.pdf"><span><em>Currículum vitae</em></span></a>
                 </li>
             </ul>
-        </nav>
+        </div>
     </header>
     <main>
         <h1>Bienvenidos a mi página web</h1>
