--- a/index.html
+++ b/index.html
@@ -8,22 +8,28 @@
 </head>
 <body>
     <header>
-        <div class="navbar-collapse main-menu-item collapse justify-content-start" id="navbar-content">
-            <ul class="navbar-nav d-md-inline-flex">
-                <li class="nav-item">
-                    <a class="nav-link " href="index.html" data-target="#about"><span>Inicio</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="perfil_académico.html"><span>Perfil académico</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="publicaciones.html"><span>Publicaciones</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="cvn-completo.pdf"><span><em>Currículum vitae</em></span></a>
-                </li>
-            </ul>
-        </div>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <div class="navbar-collapse main-menu-item collapse justify-content-start" id="navbar-content">
+                    <ul class="navbar-nav d-md-inline-flex">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html"><span>Inicio</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="perfil_académico.html"><span>Perfil académico</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="publicaciones.html"><span>Publicaciones</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="cvn-completo.pdf"><span><em>Currículum vitae</em></span></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
     <main>
         <h1>Bienvenidos a mi página web</h1>
