--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <div class="navbar-collapse main-menu-item collapse justify-content-start" id="navbar-content">
-                    <ul class="navbar-nav d-md-inline-flex">
+                    <ul class="navbar-nav d-md-inline-flex mx-auto">
                         <li class="nav-item">
                             <a class="nav-link" href="index.html"><span>Inicio</span></a>
                         </li>
