--- a/perfil_académico.html
+++ b/perfil_académico.html
@@ -6,14 +6,31 @@
     <title>Perfil académico</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Web</title>
-</head>
 <body>
+    <header>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <div class="navbar-collapse main-menu-item collapse justify-content-start" id="navbar-content">
+                    <ul class="navbar-nav d-md-inline-flex mx-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html"><span>Inicio</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="perfil_académico.html"><span>Perfil académico</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="publicaciones.html"><span>Publicaciones</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="cvn-completo.pdf"><span><em>Currículum vitae</em></span></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     <h1>Entorno de trabajo</h1>
     <p>A continuación, encontrarás una breve descripción de mi perfil académico, con el entorno personal de aprendizaje y el entorno personal de investigación.</p>
     <h2>Entorno personal de aprendizaje</h2>
