--- a/publicaciones.html
+++ b/publicaciones.html
@@ -7,10 +7,36 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <h1>Publicaciones</h1>
-    <h2 id="journal-publications">En revistas académicas</h2>
-<ul>
-<li>2023. The long-term average spectrum in forensic phonetics: From collation to discrimination of speakers. <em>Journal of Experimental Phonetics</em>, <em>32</em>, 87-110. <a href="papers/just-alcaraz-2023.pdf" target="_blank">[Descarga aquí]</a><a href="https://doi.org/10.1344/efe-2023-32-87-110" target="_blank"><i class = "ai ai-doi ai-lg"></i></a><a href="https://revistes.ub.edu/index.php/experimentalphonetics/article/view/44481/40851" target="_blank"><i class = "ai ai-open-access ai-lg"></i></a></li>
-</ul>
+    <header>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <div class="navbar-collapse main-menu-item collapse justify-content-start" id="navbar-content">
+                    <ul class="navbar-nav d-md-inline-flex mx-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html"><span>Inicio</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="perfil_académico.html"><span>Perfil académico</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="publicaciones.html"><span>Publicaciones</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="cvn-completo.pdf"><span><em>Currículum vitae</em></span></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <h1>Publicaciones</h1>
+        <h2 id="journal-publications">En revistas académicas</h2>
+        <ul>
+            <li>2023. The long-term average spectrum in forensic phonetics: From collation to discrimination of speakers. <em>Journal of Experimental Phonetics</em>, <em>32</em>, 87-110. <a href="papers/just-alcaraz-2023.pdf" target="_blank">[Descarga aquí]</a><a href="https://doi.org/10.1344/efe-2023-32-87-110" target="_blank"><i class = "ai ai-doi ai-lg"></i></a><a href="https://revistes.ub.edu/index.php/experimentalphonetics/article/view/44481/40851" target="_blank"><i class = "ai ai-open-access ai-lg"></i></a></li>
+        </ul>
+    </main>
 </body>
 </html>
