--- a/perfil_académico.html
+++ b/perfil_académico.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <header>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-weight: bold; font-family: 'Trebuchet MS'">
             <div class="container-fluid">
                 <div class="navbar-collapse main-menu-item collapse justify-content-start" id="navbar-content">
@@ -24,7 +24,7 @@
                             <a class="nav-link" href="publicaciones.html"><span>Publicaciones</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="cvn-completo.pdf"><span><em>Currículum vitae</em></span></a>
+                            <a class="nav-link" href="cvn-completo.pdf"><span><em>Curriculum vitae</em></span></a>
                         </li>
                     </ul>
                 </div>
