--- a/perfil_académico.html
+++ b/perfil_académico.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <header>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-weight: bold; font-family: 'Trebuchet MS'">
             <div class="container-fluid">
                 <div class="navbar-collapse main-menu-item collapse justify-content-start" id="navbar-content">
@@ -33,7 +33,7 @@
     </header>
     <main style="margin-top: 10px; margin-bottom: 10px; margin-left: 50px; margin-right: 50px;">
         <h1 style="font-family: 'Trebuchet MS'">Entorno de trabajo</h1>
-        <p style="text-align: justify; font-family: 'EB Garamond'">A continuación, encontrarás una breve descripción de mi perfil académico, con el entorno personal de aprendizaje y el entorno personal de investigación.</p>
+        <p style="text-align: justify; font-family: 'Encode Sans Semi Condensed'">A continuación, encontrarás una breve descripción de mi perfil académico, con el entorno personal de aprendizaje y el entorno personal de investigación.</p>
         <h2 style="font-family: 'Trebuchet MS'">Entorno personal de aprendizaje</h2>
         <p style="text-align: justify; font-family: 'EB Garamond'">Como futuro investigador y actual estudiante, me interesa sobremanera mantenerme actualizado en los últimos avances y publicaciones de mis áreas de interés (principalmente, la fonética y fonología teóricas y aplicadas). Por ello, en mi entorno personal de aprendizaje me mantengo actualizado de las últimas novedades mediante listas de difusión como Infoling y Luinguist List, a las que estoy suscrito, así como siguiendo infinidad de cuentas (personales, editoriales, institucionales…) en redes sociales como X o BlueSky (esta última más de nicho, con un uso mucho más académico). Precisamente en ellas, aparecen con gran asiduidad noticias relacionadas con mi campo de forma más inmediata que en las listas.</p>
         <p style="text-align: justify; font-family: 'EB Garamond'">Con frecuencia, además, recurro a fuentes de información varias, tales como artículos académicos de revistas especializadas: para la fonética y la fonología en general, <i>Loquens</i> y <i>Estudios de Fonética Experimental</i> (ambas de ámbito nacional, aunque internacionalizadas), por ejemplo, y para la vertiente aplicada, algunas como el <i>International Journal of Speech-Language Pathology</i> o el <i>Journal of Speech, Language, and Hearing Research</i> (de tónica clínica) y <i>The International Journal of Speech, Language and the Law</i> (de interés forense), todas ellas de alcance internacional. También tengo en cuenta editoriales más genéricas (Síntesis, Akal, Routledge, Oxford, Cambridge, Tylor & Francis, etc.).</p>
