--- a/publicaciones.html
+++ b/publicaciones.html
@@ -10,7 +10,7 @@
     <header>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-weight: bold; font-family: 'Trebuchet MS'">
             <div class="container-fluid">
                 <div class="navbar-collapse main-menu-item collapse justify-content-start" id="navbar-content">
                     <ul class="navbar-nav d-md-inline-flex mx-auto">
@@ -31,9 +31,9 @@
             </div>
         </nav>
     </header>
-    <main>
-        <h1>Publicaciones</h1>
-        <h2 id="journal-publications">En revistas académicas</h2>
+    <main style="text-align: justify">
+        <h1 style="font-family: 'Trebuchet MS'; color: 00ffff">Publicaciones</h1>
+        <h2 style="font-family: 'Trebuchet MS'; color: 00ffff">En revistas académicas</h2>
         <ul>
             <li>2023. The long-term average spectrum in forensic phonetics: From collation to discrimination of speakers. <em>Journal of Experimental Phonetics</em>, <em>32</em>, 87-110. <a href="papers/just-alcaraz-2023.pdf" target="_blank">[Descarga aquí]</a><a href="https://doi.org/10.1344/efe-2023-32-87-110" target="_blank"><i class = "ai ai-doi ai-lg"></i></a><a href="https://revistes.ub.edu/index.php/experimentalphonetics/article/view/44481/40851" target="_blank"><i class = "ai ai-open-access ai-lg"></i></a></li>
         </ul>
