--- a/publicaciones.html
+++ b/publicaciones.html
@@ -31,7 +31,7 @@
             </div>
         </nav>
     </header>
-    <main style="text-align: justify">
+    <main style="margin-top: 10px; margin-bottom: 10px; margin-left: 50px; margin-right: 50px; text-align: justify"">
         <h1 style="font-family: 'Trebuchet MS'; color: 00ffff">Publicaciones</h1>
         <h2 style="font-family: 'Trebuchet MS'; color: 00ffff">En revistas académicas</h2>
         <ul>
