--- a/publicaciones.html
+++ b/publicaciones.html
@@ -32,8 +32,8 @@
         </nav>
     </header>
     <main style="margin-top: 10px; margin-bottom: 10px; margin-left: 50px; margin-right: 50px; text-align: justify"">
-        <h1 style="font-family: 'Trebuchet MS'; color: 00ffff">Publicaciones</h1>
-        <h2 style="font-family: 'Trebuchet MS'; color: 00ffff">En revistas académicas</h2>
+        <h1 style="font-family: 'Trebuchet MS'; color: cian">Publicaciones</h1>
+        <h2 style="font-family: 'Trebuchet MS'; color: cian">En revistas académicas</h2>
         <ul>
             <li>2023. The long-term average spectrum in forensic phonetics: From collation to discrimination of speakers. <em>Journal of Experimental Phonetics</em>, <em>32</em>, 87-110. <a href="papers/just-alcaraz-2023.pdf" target="_blank">[Descarga aquí]</a><a href="https://doi.org/10.1344/efe-2023-32-87-110" target="_blank"><i class = "ai ai-doi ai-lg"></i></a><a href="https://revistes.ub.edu/index.php/experimentalphonetics/article/view/44481/40851" target="_blank"><i class = "ai ai-open-access ai-lg"></i></a></li>
         </ul>
