--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             </div>
         </nav>
     </header>
-    <main>
-        <h1>Bienvenidos a mi página web</h1>
+    <main style="margin-top: 10px; margin-bottom: 10px; margin-left: 50px; margin-right: 50px; text-align: justify">
+        <h1 style="font-family: 'Trebuchet MS'">Bienvenidos a mi página web</h1>
         <p>Hola, soy Jordi Just Alcaraz y esta es mi página web. Actualmente —y seguro que durante mucho tiempo—, se encuentra en construcción, así que ten paciencia si algo no funciona y, sobre todo, házmelo saber (jordijustalcaraz@usal.es)</p>
     </main>
 </body>
