--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-weight: bold; font-family: 'Trebuchet MS'">
             <div class="container-fluid">
                 <div class="navbar-collapse main-menu-item collapse justify-content-start" id="navbar-content">
                     <ul class="navbar-nav d-md-inline-flex mx-auto">
@@ -33,7 +33,10 @@
     </header>
     <main style="margin-top: 10px; margin-bottom: 10px; margin-left: 50px; margin-right: 50px; text-align: justify">
         <h1 style="font-family: 'Trebuchet MS'">Bienvenidos a mi página web</h1>
-        <p>Hola, soy Jordi Just Alcaraz y esta es mi página web. Actualmente —y seguro que durante mucho tiempo—, se encuentra en construcción, así que ten paciencia si algo no funciona y, sobre todo, házmelo saber (jordijustalcaraz@usal.es)</p>
+        <p>Hola, soy Jordi Just Alcaraz y esta es mi página web. Actualmente —y seguro que durante mucho tiempo—, se encuentra en construcción, así que ten paciencia si algo no funciona y, sobre todo, házmelo saber por:</p>
+        <ul href="https://x.com/AlcarazJust">X</ul> 
+        <ul href="https://bsky.app/profile/alcarazjust.bsky.social">BlueSky</ul>
+        <ul href="jordijustalcaraz@usal.es">Correo electrónico</ul>
     </main>
 </body>
 </html>
