--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
     <main style="margin-top: 10px; margin-bottom: 10px; margin-left: 50px; margin-right: 50px; text-align: justify">
         <h1 style="font-family: 'Trebuchet MS'">Bienvenidos a mi página web</h1>
         <p>Hola, soy Jordi Just Alcaraz y esta es mi página web. Actualmente —y seguro que durante mucho tiempo—, se encuentra en construcción, así que ten paciencia si algo no funciona y, sobre todo, házmelo saber por:</p>
-        <ul href="https://x.com/AlcarazJust">X</ul> 
-        <ul href="https://bsky.app/profile/alcarazjust.bsky.social">BlueSky</ul>
-        <ul href="jordijustalcaraz@usal.es">Correo electrónico</ul>
+        <ul>
+            <li><a href="https://x.com/AlcarazJust">X</a></li>
+            <li><a href="https://bsky.app/profile/alcarazjust.bsky.social">BlueSky</a></li>
+            <li><a href="jordijustalcaraz@usal.es">Correo electrónico</a></li>
+        </ul>
     </main>
 </body>
 </html>
