--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <a class="nav-link" href="publicaciones.html"><span>Publicaciones</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="cvn-completo.pdf"><span><em>Currículum vitae</em></span></a>
+                            <a class="nav-link" href="cvn-completo.pdf"><span><em>Curriculum vitae</em></span></a>
                         </li>
                     </ul>
                 </div>
@@ -37,7 +37,7 @@
         <ul>
             <li><a href="https://x.com/AlcarazJust">X</a></li>
             <li><a href="https://bsky.app/profile/alcarazjust.bsky.social">BlueSky</a></li>
-            <li><a href="jordijustalcaraz@usal.es">Correo electrónico</a></li>
+            <li>Correo electrónico (jordijustalcaraz@usal.es)</li>
         </ul>
     </main>
 </body>
