--- a/publicaciones.html
+++ b/publicaciones.html
@@ -24,7 +24,7 @@
                             <a class="nav-link" href="publicaciones.html"><span>Publicaciones</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="cvn-completo.pdf"><span><em>Currículum vitae</em></span></a>
+                            <a class="nav-link" href="cvn-completo.pdf"><span><em>Curriculum vitae</em></span></a>
                         </li>
                     </ul>
                 </div>
