--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-weight: bold; font-family: 'Trebuchet MS'">
             <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
                 <div class="navbar-collapse main-menu-item collapse justify-content-start" id="navbar-content">
                     <ul class="navbar-nav d-md-inline-flex mx-auto">
                         <li class="nav-item">
