--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                             <a class="nav-link" href="index.html"><span>Inicio</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="perfil_académico.html"><span>Perfil académico</span></a>
+                            <a class="nav-link" href="perfil-académico.html"><span>Perfil académico</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="publicaciones.html"><span>Publicaciones</span></a>
