--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
             </div>
         </nav>
     </header>
+    <div class="row">
+  <div class="col-12 col-lg-4">
+    <div id="profile">
+      <img class="avatar avatar-circle" src="foto.jpg" alt="Jordi Just Alcaraz">
+      <div class="portrait-title">
+        <h2>Jordi Just Alcaraz</h2>
+        <h3>Investigador predoctoral (máster)</h3>
+        <h3>Universidad de Salamanca</h3>
+        <h3>Área de Lingüística</h3>
+      </div>
     <main style="margin-top: 10px; margin-bottom: 10px; margin-left: 50px; margin-right: 50px; text-align: justify">
         <h1 style="font-family: 'Trebuchet MS'">Bienvenidos a mi página web</h1>
         <p>Hola, soy Jordi Just Alcaraz y esta es mi página web. Actualmente —y seguro que durante mucho tiempo—, se encuentra en construcción, así que ten paciencia si algo no funciona y, sobre todo, házmelo saber por:</p>
