--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-weight: bold; font-family: 'Trebuchet MS'">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,14 +45,37 @@
         <h3>Universidad de Salamanca</h3>
         <h3>Área de Lingüística</h3>
       </div>
-    <main style="margin-top: 10px; margin-bottom: 10px; margin-left: 50px; margin-right: 50px; text-align: justify">
-        <h1 style="font-family: 'Trebuchet MS'">Bienvenidos a mi página web</h1>
-        <p>Hola, soy Jordi Just Alcaraz y esta es mi página web. Actualmente —y seguro que durante mucho tiempo—, se encuentra en construcción, así que ten paciencia si algo no funciona y, sobre todo, házmelo saber por:</p>
-        <ul>
-            <li><a href="https://x.com/AlcarazJust">X</a></li>
-            <li><a href="https://bsky.app/profile/alcarazjust.bsky.social">BlueSky</a></li>
-            <li>Correo electrónico (jordijustalcaraz@usal.es)</li>
+        <ul class="network-icon" aria-hidden="true">
+        <li>
+          <a href="mailto:jordijustalcaraz@usal.es" >
+            <i class="fas fa-envelope"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://x.com/AlcarazJust" target="_blank" rel="noopener">
+            <i class="fab fa-x-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://bsky.app/profile/alcarazjust.bsky.social" target="_blank" rel="noopener">
+            <i class="fa-brands fa-bluesky"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/AlcarazJust" target="_blank" rel="noopener">
+            <i class="fab fa-github"></i>
+          </a>
+        </li>
         </ul>
-    </main>
+    </div>
+  </div>
+    <div class="col-12 col-lg-8">
+        <main style="margin-top: 10px; margin-bottom: 10px; margin-left: 50px; margin-right: 50px; text-align: justify">
+            <h1 style="font-family: 'Trebuchet MS'">Bienvenidos a mi página web</h1>
+            <p>¡Hola a todos! Soy Jordi Just Alcaraz y esta es mi página web. Actualmente —y seguro que durante mucho tiempo—, se encuentra en construcción, así que ten paciencia si algo no funciona y, sobre todo, házmelo saber.</p>
+        </main>
+        <div class="row">
+        </div>
+    </div>
 </body>
 </html>
