--- a/index.html
+++ b/index.html
@@ -6,42 +6,37 @@
     <title>Mi página web</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <style>
-    /* Estilo general para el contenedor del perfil */
-    #profile {
-      display: flex; /* Para organizar en fila */
-      align-items: center; /* Centrar verticalmente */
-      gap: 20px; /* Espaciado entre la imagen y el texto */
-      text-align: left; /* Alinear el texto a la izquierda */
-      margin: 20px;
-    }
-
-    /* Estilo para la imagen */
-    .avatar-circle {
-      width: 150px; /* Ancho de la imagen */
-      height: 150px; /* Altura igual al ancho para el círculo */
-      border-radius: 50%; /* Forma de círculo */
-      object-fit: cover; /* Ajustar la imagen al contenedor sin deformarla */
-      border: 2px solid #ddd; /* Borde opcional */
-    }
-
-    /* Estilo para los títulos */
-    .portrait-title h2 {
-      margin: 0; /* Eliminar márgenes por defecto */
-      font-size: 24px; /* Tamaño del nombre */
-    }
-
-    .portrait-title h3 {
-      margin: 5px 0; /* Espaciado entre subtítulos */
-      font-size: 18px; /* Tamaño de los subtítulos */
-      color: #555; /* Color gris para el texto */
-    }
+        #profile {
+          display: flex; /* Activar flexbox */
+          flex-direction: column; /* Organizar los elementos en columna */
+          align-items: center; /* Centrar verticalmente */
+          gap: 20px; /* Espaciado entre la imagen y el texto */
+          text-align: center; /* Alinear el texto a la izquierda */
+          margin: 20px;
+        }
+        .avatar-circle {
+          width: 200px; /* Ancho de la imagen */
+          height: 200px; /* Altura igual al ancho para el círculo */
+          border-radius: 100%; /* Forma de círculo */
+          object-fit: cover; /* Ajustar la imagen al contenedor sin deformarla */
+          border: 2px solid #ddd; /* Borde opcional */
+        }
+        .portrait-title h2 {
+          margin: 0; /* Eliminar márgenes por defecto */
+          font-size: 24px; /* Tamaño del nombre */
+        }
+        .portrait-title h3 {
+          margin: 5px 0; /* Espaciado entre subtítulos */
+          font-size: 18px; /* Tamaño de los subtítulos */
+          color: #555; /* Color gris para el texto */
+        }
   </style>
 </head>
 <body>
     <header>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-weight: bold; font-family: 'Trebuchet MS'">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
