--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           align-items: center; /* Centrar verticalmente */
           gap: 20px; /* Espaciado entre la imagen y el texto */
           text-align: center; /* Alinear el texto a la izquierda */
-          margin: 20px;
+          margin: 10px;
         }
         .avatar-circle {
           width: 200px; /* Ancho de la imagen */
@@ -29,6 +29,22 @@
           margin: 5px 0; /* Espaciado entre subtítulos */
           font-size: 18px; /* Tamaño de los subtítulos */
           color: #555; /* Color gris para el texto */
+        }
+        .icon-list {
+          list-style: none; /* Eliminar los puntos de las listas */
+          display: flex; /* Organizar en fila */
+          justify-content: center; /* Centrar horizontalmente */
+          padding: 0; /* Quitar el margen interno de la lista */
+          gap: 15px; /* Espacio entre los iconos */
+        }
+        .icon-list li a {
+          text-decoration: none; /* Quitar el subrayado */
+          color: #555; /* Color de los iconos */
+          font-size: 24px; /* Tamaño de los iconos */
+          transition: color 0.3s; /* Animación para el cambio de color */
+        }
+        .icon-list li a:hover {
+          color: #1DA1F2; /* Azul de Twitter */
         }
   </style>
 </head>
