--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
           flex-direction: column; /* Organizar los elementos en columna */
           align-items: center; /* Centrar verticalmente */
           gap: 20px; /* Espaciado entre la imagen y el texto */
-          text-align: center; /* Alinear el texto a la izquierda */
-          margin: 10px;
+          text-align: center; /* Alinear el texto al centro */
+          margin: 20px;
         }
         .avatar-circle {
           width: 200px; /* Ancho de la imagen */
@@ -30,20 +30,20 @@
           font-size: 18px; /* Tamaño de los subtítulos */
           color: #555; /* Color gris para el texto */
         }
-        .icon-list {
+        ul {
           list-style: none; /* Eliminar los puntos de las listas */
           display: flex; /* Organizar en fila */
           justify-content: center; /* Centrar horizontalmente */
           padding: 0; /* Quitar el margen interno de la lista */
           gap: 15px; /* Espacio entre los iconos */
         }
-        .icon-list li a {
+        ul li a {
           text-decoration: none; /* Quitar el subrayado */
           color: #555; /* Color de los iconos */
           font-size: 24px; /* Tamaño de los iconos */
           transition: color 0.3s; /* Animación para el cambio de color */
         }
-        .icon-list li a:hover {
+        ul li a:hover {
           color: #1DA1F2; /* Azul de Twitter */
         }
   </style>
@@ -112,7 +112,7 @@
     </div>
   </div>
     <div class="col-12 col-lg-8">
-        <main style="margin-top: 10px; margin-bottom: 10px; margin-left: 50px; margin-right: 50px; text-align: justify">
+        <main style="margin-top: 10px; margin-bottom: 10px; margin-right: 50px; text-align: justify">
             <h1 style="font-family: 'Trebuchet MS'">Bienvenidos a mi página web</h1>
             <p>¡Hola a todos! Soy Jordi Just Alcaraz y esta es mi página web. Actualmente —y seguro que durante mucho tiempo—, se encuentra en construcción, así que ten paciencia si algo no funciona y, sobre todo, házmelo saber.</p>
         </main>
