--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         justify-content: center; /* Centrar verticalmente */
         gap: 20px; /* Espaciado entre la imagen y el texto */
         text-align: center; /* Alinear el texto al centro */
-        margin: 0 auto; /* Centramos el contenedor horizontalmente */
+        margin: 20px; /* Centramos el contenedor horizontalmente */
         width: 100%; /* Aseguramos que ocupe el 100% del ancho */
         max-width: 500px; /* Limitar el ancho máximo si es necesario */
     }
@@ -51,7 +51,7 @@
         justify-content: center; /* Centrar horizontalmente */
         margin: 0;
         padding: 0; /* Quitar el margen interno de la lista */
-        gap: 15px; /* Espacio entre los iconos */
+        gap: 0; /* Espacio entre los iconos */
     }
 
     /* Enlace de iconos */
