--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         justify-content: center; /* Centrar horizontalmente */
         margin: 0;
         padding: 0; /* Quitar el margen interno de la lista */
-        gap: 0; /* Espacio entre los iconos */
+        gap: 15px; /* Espacio entre los iconos */
     }
 
     /* Enlace de iconos */
