--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         flex-direction: column; /* Organizar los elementos en columna */
         align-items: center; /* Centrar horizontalmente */
         justify-content: center; /* Centrar verticalmente */
-        gap: 20px; /* Espaciado entre la imagen y el texto */
+        gap: 0; /* Espaciado entre la imagen y el texto */
         text-align: center; /* Alinear el texto al centro */
         margin: 20px; /* Centramos el contenedor horizontalmente */
         width: 100%; /* Aseguramos que ocupe el 100% del ancho */
