--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         flex-direction: column; /* Organizar los elementos en columna */
         align-items: center; /* Centrar horizontalmente */
         justify-content: center; /* Centrar verticalmente */
-        gap: 0; /* Espaciado entre la imagen y el texto */
+        gap: 20px; /* Espaciado entre la imagen y el texto */
         text-align: center; /* Alinear el texto al centro */
         margin: 20px; /* Centramos el contenedor horizontalmente */
         width: 100%; /* Aseguramos que ocupe el 100% del ancho */
@@ -99,7 +99,7 @@
     </header>
     <div class="row">
   <div class="col-12 col-lg-4">
-    <div id="profile">
+    <div id="profile" style="padding: 0">
       <img class="avatar avatar-circle" src="foto.jpg" alt="Jordi Just Alcaraz">
       <div class="portrait-title">
         <h2>Jordi Just Alcaraz</h2>
