--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         justify-content: center; /* Centrar verticalmente */
         gap: 20px; /* Espaciado entre la imagen y el texto */
         text-align: center; /* Alinear el texto al centro */
-        margin: 20px; /* Centramos el contenedor horizontalmente */
+        margin-top: 10px; 
+        margin-bottom: 10px; 
+        margin-left: 20px; 
+        margin-right: 20px;
         width: 100%; /* Aseguramos que ocupe el 100% del ancho */
         max-width: 500px; /* Limitar el ancho máximo si es necesario */
     }
@@ -99,7 +102,7 @@
     </header>
     <div class="row">
   <div class="col-12 col-lg-4">
-    <div id="profile" style="padding: 0">
+    <div id="profile">
       <img class="avatar avatar-circle" src="foto.jpg" alt="Jordi Just Alcaraz">
       <div class="portrait-title">
         <h2>Jordi Just Alcaraz</h2>
@@ -132,7 +135,7 @@
     </div>
   </div>
     <div class="col-12 col-lg-8">
-        <main style="margin-top: 10px; margin-bottom: 10px; margin-right: 50px; text-align: justify">
+        <main style="margin-top: 10px; margin-bottom: 10px; margin-left: 20px; margin-right: 20px; text-align: justify">
             <h1 style="font-family: 'Trebuchet MS'">Bienvenidos a mi página web</h1>
             <p>¡Hola a todos! Soy Jordi Just Alcaraz y esta es mi página web. Actualmente —y seguro que durante mucho tiempo—, se encuentra en construcción, así que ten paciencia si algo no funciona y, sobre todo, házmelo saber.</p>
         </main>
