--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
         justify-content: center; /* Centrar verticalmente */
         gap: 20px; /* Espaciado entre la imagen y el texto */
         text-align: center; /* Alinear el texto al centro */
-        margin-top: 10px; 
-        margin-bottom: 10px; 
-        margin-left: 20px; 
-        margin-right: 20px;
+        margin: 20px;
         width: 100%; /* Aseguramos que ocupe el 100% del ancho */
         max-width: 500px; /* Limitar el ancho máximo si es necesario */
     }
