--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         list-style: none; /* Eliminar los puntos de las listas */
         display: flex; /* Organizar en fila */
         justify-content: center; /* Centrar horizontalmente */
-        margin: 0;
-        padding: 0; /* Quitar el margen interno de la lista */
+        margin: 0 !important;
+        padding: 0 !important; /* Quitar el margen interno de la lista */
         gap: 15px; /* Espacio entre los iconos */
     }
 
