--- a/publicaciones.html
+++ b/publicaciones.html
@@ -12,7 +12,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-weight: bold; font-family: 'Trebuchet MS'">
             <div class="container-fluid">
-                <h3 class="navbar-title" style="font-weight: bold">Página web de Jordi Just Alcaraz</h3>
+                <h3 class="navbar-title" style="font-weight: bold; margin-right: 20px">Página web de Jordi Just Alcaraz</h3>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
