--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
       </div>
     <div class="col-12 col-lg-8">
-        <main style="margin: 2rem; text-align: justify">
+        <main style="margin: 1rem 2rem; text-align: justify">
             <h1>Bienvenidos a mi página web</h1>
             <p>¡Hola a todos! Soy Jordi Just Alcaraz y esta es mi página web. Actualmente —y seguro que durante mucho tiempo—, se encuentra en construcción, así que ten paciencia si algo no funciona y, sobre todo, házmelo saber.</p>
         </main>
