--- a/publicaciones.html
+++ b/publicaciones.html
@@ -34,7 +34,7 @@
             </div>
         </nav>
     </header>
-    <main style="margin-top: 10px; margin-bottom: 10px; margin-left: 20px; margin-right: 20px; text-align: justify">
+    <main style="margin: 1rem 2rem; text-align: justify">
         <h1>Publicaciones</h1>
         <p>Todas las publicaciones que se listan a continuación se citan en formato APA. Al final de cada referencia, se puede descargar el documento en cuestión.</p>
         <h2>En revistas académicas</h2>
