--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
                     </ul>
                 </div>
             </div>
-            <h3 style="text-align: right">Jordi Just Alcaraz</h3>
+            <h3>Jordi Just Alcaraz</h3>
         </nav>
     </header>
-    <section id="about" class="home-section wg-about   "  >
+    <section id="about" class="home-section wg-about">
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-4">
@@ -138,8 +138,7 @@
             </div>
         </div>
     </div>
-    </section>
-    <div class="col-12 col-lg-8">
+        <div class="col-12 col-lg-8">
         <main style="margin: 1rem 2rem; text-align: justify">
             <h1>Bienvenidos a mi página web</h1>
             <p>¡Hola a todos! Soy Jordi Just Alcaraz y esta es mi página web. Actualmente —y seguro que durante mucho tiempo—, se encuentra en construcción, así que ten paciencia si algo no funciona y, sobre todo, házmelo saber.</p>
@@ -147,5 +146,6 @@
         <div class="row">
         </div>
     </div>
+</section>
 </body>
 </html>
