--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </ul>
                 </div>
             </div>
-            <h3>Jordi Just Alcaraz</h3>
+            <nav>><h3>Jordi Just Alcaraz</h3></nav>
         </nav>
     </header>
     <section id="about" class="home-section wg-about">
@@ -114,7 +114,7 @@
                     </div>
                     <ul class="network-icon" aria-hidden="true">
                         <li>
-                            <a href="mailto:jordijustalcaraz@usal.es" >
+                            <a href="mailto:jordijustalcaraz@usal.es">
                                 <i class="fas fa-envelope"></i>
                             </a>
                         </li>
@@ -136,14 +136,12 @@
                     </ul>
                 </div>
             </div>
-        </div>
-    </div>
-        <div class="col-12 col-lg-8">
-        <main style="margin: 1rem 2rem; text-align: justify">
-            <h1>Bienvenidos a mi página web</h1>
-            <p>¡Hola a todos! Soy Jordi Just Alcaraz y esta es mi página web. Actualmente —y seguro que durante mucho tiempo—, se encuentra en construcción, así que ten paciencia si algo no funciona y, sobre todo, házmelo saber.</p>
-        </main>
-        <div class="row">
+            <div class="col-12 col-lg-8">
+                <main style="margin: 1rem 2rem; text-align: justify">
+                    <h1>Bienvenidos a mi página web</h1>
+                    <p>¡Hola a todos! Soy Jordi Just Alcaraz y esta es mi página web. Actualmente —y seguro que durante mucho tiempo—, se encuentra en construcción, así que ten paciencia si algo no funciona y, sobre todo, házmelo saber.</p>
+                </main>
+            </div>
         </div>
     </div>
 </section>
