--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
                     </ul>
                 </div>
             </div>
-            <nav><h3>Jordi Just Alcaraz</h3></nav>
+            <nav class="no-wrap"><h3>Jordi Just Alcaraz</h3></nav>
         </nav>
     </header>
     <section id="about" class="home-section wg-about">
     <div class="container">
-        <div class="row g-2">
+        <div class="row g-5">
             <div class="col-12 col-lg-4">
                 <div id="profile">
                     <img class="avatar avatar-circle" src="foto.jpg" alt="Jordi Just Alcaraz">
