--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </ul>
                 </div>
             </div>
-            <h4>Jordi Just Alcaraz</h4>
+            <p>Jordi Just Alcaraz<p>
         </nav>
     </header>
     <section id="about" class="home-section wg-about">
