--- a/publicaciones.html
+++ b/publicaciones.html
@@ -42,7 +42,7 @@
     <p style="text-align: center; margin: 1rem 2rem">Todas las publicaciones que se listan a continuación se citan en formato APA. Al final de cada referencia, se puede descargar el documento en cuestión.</p>
     <div class="container">
         <div class="row">
-            <div class="col-12 col-lg-2 me-3" style="margin-right: 30px;">   
+            <div class="col-12 col-lg-2 me-3">   
                 <div id="scientific publications">
                     <h1>Publicaciones científicas</h1>
                 </div>
