--- a/index.html
+++ b/index.html
@@ -59,14 +59,9 @@
     /* Enlace de iconos */
     #profile ul li a {
         text-decoration: none; /* Quitar el subrayado */
-        color: #555; /* Color de los iconos */
+        color: #1DA1F2; /* Color de los iconos */
         font-size: 24px; /* Tamaño de los iconos */
         transition: color 0.3s; /* Animación para el cambio de color */
-    }
-
-    /* Efecto al pasar el ratón */
-    ul li a:hover {
-        color: #1DA1F2;
     }
     </style>
 </head>
@@ -137,28 +132,28 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="portrait-academic">
-                        <h3>Puedes seguirme también en:</h3>
+                    <div class="academic-websites">
+                        <p>Puedes seguirme también en:</p>
                     </div>
                     <ul class="network-icon" aria-hidden="true">
                         <li>
                             <a href="https://orcid.org/0000-0002-7003-5466" target="_blank" rel="noopener">
-                                <i class="ai ai-orcid-square ai"></i>
+                                <i class="ai ai-orcid ai-lg"></i>
                             </a>
                         </li>
                         <li>
                             <a href="https://www.researchgate.net/profile/Jordi-Just-Alcaraz" target="_blank" rel="noopener">
-                                <i class="ai ai-researchgate-square ai"></i>
+                                <i class="ai ai-researchgate ai-lg"></i>
                             </a>
                         </li>
                         <li>
                             <a href="https://scholar.google.com/citations?user=fk0ngtIAAAAJ&hl=es" target="_blank" rel="noopener">
-                                <i class="ai ai-google-scholar-square ai"></i>
+                                <i class="ai ai-google-scholar ai-lg"></i>
                             </a>
                         </li>
                         <li>
                             <a href="https://usal.academia.edu/JordiJustAlcaraz" target="_blank" rel="noopener">
-                                <i class="ai ai-academia-square ai"></i>
+                                <i class="ai ai-academia ai-lg"></i>
                             </a>
                         </li>
                     </ul>
