--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
     </nav>
 </header>
-    <section id="about" class="home-section wg-about">
+<section id="about" class="home-section wg-about">
     <div class="container">
         <div class="row g-0">
             <div class="col-12 col-lg-4">
@@ -132,10 +132,10 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="academic-websites">
+                    <div class="academic-websites wg-profile">
                         <p>Puedes seguirme también en:</p>
                     </div>
-                    <ul class="network-icon" aria-hidden="true">
+                    <ul class="network-icon wg-profile" aria-hidden="true">
                         <li>
                             <a href="https://orcid.org/0000-0002-7003-5466" target="_blank" rel="noopener">
                                 <i class="ai ai-orcid ai-lg"></i>
